fix: white-space no-wrap for large screens

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
 #app h1 {
   font-size: 12vw;
   user-select: none;
+  white-space: nowrap;
 }
 
 #app .subheading {
